# nonebot_plugin_tts_gal

./: LICENSE  README.md  Usage.md  pyproject.toml
data/nonebot_plugin_tts_gal/config/: ATRI.json  YuzuSoft.json
example/: .env.dev
nonebot_plugin_tts_gal/: __init__.py  attentions.py  config.py  depends.py  function.py  initial.py  japanese_g2p.py  kmandarin_8105_local.py  models.py  modules.py  utils.py
nonebot_plugin_tts_gal/text/: __init__.py  cleaners.py  symbols.py
