[tool.poetry]
name = "nonebot_plugin_tts_gal"
version = "0.3.10"
description = "基于nonebot2和vits的本地化角色语音合成插件"
authors = ["dpm12345 <1006975692@qq.com>"]
readme = "README.md"
homepage = "https://github.com/dpm12345/nonebot_plugin_tts_gal"
repository = "https://github.com/dpm12345/nonebot_plugin_tts_gal"
license = "MIT"


[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0b4"
nonebot-adapter-onebot = "^2.1.1"
nonebot-plugin-apscheduler = "^0.2.0"
numpy = "^1.20.0"
unidecode = "^1.1.1"
pyopenjtalk = "^0.3.0"
torch = "^1.6.0"
numba = "^0.56.2"
ffmpy = "^0.3.0"
scipy = "^1.5.2"
pypinyin = "^0.47.0"
jieba = "^0.42.1"
httpx = "^0.23.1"
janome = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
